--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
         <div class="page active" id="almocos">
             <div class="content">
                 <div class="image-section">
-                    <img src="./image/Arrumadinho.jpg" alt="Lasanha" class="food-image" id="lasanha">
-                    <img src="./image/Lasanha.jpg" alt="Frango" class="food-image hidden" id="frango">
-                    <img src="./image/Parmegiana.jpg" alt="Salmão" class="food-image hidden" id="salmao">
-                    <img src="./image/Arrumadinho.jpg" alt="Risoto" class="food-image hidden" id="risoto">
-                    <img src="./image/Lasanha.jpg" alt="Strogonoff" class="food-image hidden" id="strogonoff">
+                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Salmão+Maracujá" alt="Lasanha" class="food-image" id="lasanha">
+                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Salmão+Maracujá" alt="Frango" class="food-image hidden" id="frango">
+                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Salmão+Maracujá" alt="Salmão" class="food-image hidden" id="salmao">
+                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Salmão+Maracujá" alt="Risoto" class="food-image hidden" id="risoto">
+                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Salmão+Maracujá" alt="Strogonoff" class="food-image hidden" id="strogonoff">
                 </div>
                 <div class="menu-section">
                     <div class="menu-list">
@@ -271,11 +271,11 @@
         <div class="page" id="sobremesas">
             <div class="content">
                 <div class="image-section">
-                    <img src="./image/musse.jpg" alt="Pudim" class="food-image" id="pudim">
-                    <img src="./image/pudim.jpg" alt="Mousse" class="food-image hidden" id="mousse">
-                    <img src="./image/sovete.jpg" alt="Cheesecake" class="food-image hidden" id="cheesecake">
-                    <img src="./image/musse.jpg" alt="Sorvete" class="food-image hidden" id="sorvete">
-                    <img src="./image/pudim.jpg" alt="Tiramisù" class="food-image hidden" id="tiramisu">
+                    <img src="https://via.placeholder.com/800x600/FF6B6B/FFFFFF?text=Pudim+Leite" alt="Pudim" class="food-image" id="pudim">
+                    <img src="https://via.placeholder.com/800x600/4ECDC4/FFFFFF?text=Mousse+Chocolate" alt="Mousse" class="food-image hidden" id="mousse">
+                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Cheesecake+Morango" alt="Cheesecake" class="food-image hidden" id="cheesecake">
+                    <img src="https://via.placeholder.com/800x600/96CEB4/FFFFFF?text=Sorvete+Baunilha" alt="Sorvete" class="food-image hidden" id="sorvete">
+                    <img src="https://via.placeholder.com/800x600/F7DC6F/FFFFFF?text=Tiramisù+Italiano" alt="Tiramisù" class="food-image hidden" id="tiramisu">
                 </div>
                 <div class="menu-section">
                     <div class="menu-list">
