feat: criação dos arquivos painel de controle, e seus arquivos de css e js

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="content">
 
                 <div class="image-section">
-                    <img src="https://via.placeholder.com/800x600/FF6B6B/FFFFFF?text=Lasanha+Bolonhesa" alt="Lasanha" class="food-image" id="lasanha">
-                    <img src="https://via.placeholder.com/800x600/4ECDC4/FFFFFF?text=Frango+Grelhado" alt="Frango" class="food-image hidden" id="frango">
-                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Salmão+Maracujá" alt="Salmão" class="food-image hidden" id="salmao">
-                    <img src="https://via.placeholder.com/800x600/96CEB4/FFFFFF?text=Risoto+Cogumelos" alt="Risoto" class="food-image hidden" id="risoto">
-                    <img src="https://via.placeholder.com/800x600/F7DC6F/FFFFFF?text=Strogonoff+Carne" alt="Strogonoff" class="food-image hidden" id="strogonoff">
+                    <img src="./image/Lasanha.jpg" alt="Lasanha" class="food-image" id="lasanha">
+                    <img src="./image/Arrumadinho.jpg" alt="Frango" class="food-image hidden" id="frango">
+                    <img src="./image/Parmegiana.jpg" alt="Salmão" class="food-image hidden" id="salmao">
+                    <img src="./image/Lasanha.jpg" alt="Risoto" class="food-image hidden" id="risoto">
+                    <img src="./image/Parmegiana.jpg" alt="Strogonoff" class="food-image hidden" id="strogonoff">
                 </div>
 
                 <div class="menu-section">
@@ -65,11 +65,11 @@
             <div class="content">
 
                 <div class="image-section">
-                    <img src="https://via.placeholder.com/800x600/FF6B6B/FFFFFF?text=Nuggets+Frango" alt="Nuggets" class="food-image" id="nuggets">
-                    <img src="https://via.placeholder.com/800x600/4ECDC4/FFFFFF?text=Espaguete+Bolonhesa" alt="Espaguete" class="food-image hidden" id="bolonhesa">
-                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Hambúrguer+Infantil" alt="Hambúrguer" class="food-image hidden" id="hamburguer">
-                    <img src="https://via.placeholder.com/800x600/96CEB4/FFFFFF?text=Panqueca+Frango" alt="Panqueca" class="food-image hidden" id="panqueca">
-                    <img src="https://via.placeholder.com/800x600/F7DC6F/FFFFFF?text=Fish+%26+Chips" alt="Fish & Chips" class="food-image hidden" id="fish">
+                    <img src="./image/Lasanha.jpg" alt="Nuggets" class="food-image" id="nuggets">
+                    <img src="./image/Arrumadinho.jpg" alt="Espaguete" class="food-image hidden" id="bolonhesa">
+                    <img src="./image/Parmegiana.jpg" alt="Hambúrguer" class="food-image hidden" id="hamburguer">
+                    <img src="./image/pudim.jpg" alt="Panqueca" class="food-image hidden" id="panqueca">
+                    <img src="./image/musse.jpg" alt="Fish & Chips" class="food-image hidden" id="fish">
                 </div>
 
                 <div class="menu-section">
@@ -106,11 +106,11 @@
             <div class="content">
 
                 <div class="image-section">
-                    <img src="https://via.placeholder.com/800x600/FF6B6B/FFFFFF?text=Bife+Parmegiana" alt="Bife" class="food-image" id="bife">
-                    <img src="https://via.placeholder.com/800x600/4ECDC4/FFFFFF?text=Filé+Mignon" alt="Filé" class="food-image hidden" id="file">
-                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Peixe+Grelhado" alt="Peixe" class="food-image hidden" id="peixe">
-                    <img src="https://via.placeholder.com/800x600/96CEB4/FFFFFF?text=Frango+Passarinho" alt="Frango" class="food-image hidden" id="frango-exec">
-                    <img src="https://via.placeholder.com/800x600/F7DC6F/FFFFFF?text=Costela+Barbecue" alt="Costela" class="food-image hidden" id="costela">
+                    <img src="./image/Lasanha.jpg" alt="Bife" class="food-image" id="bife">
+                    <img src="./image/sovete.jpg" alt="Filé" class="food-image hidden" id="file">
+                    <img src="./image/Arrumadinho.jpg" alt="Peixe" class="food-image hidden" id="peixe">
+                    <img src="./image/pudim.jpg" alt="Frango" class="food-image hidden" id="frango-exec">
+                    <img src="./image/Parmegiana.jpg" alt="Costela" class="food-image hidden" id="costela">
                 </div>
 
                 <div class="menu-section">
@@ -147,11 +147,11 @@
             <div class="content">
 
                 <div class="image-section">
-                    <img src="https://via.placeholder.com/800x600/FF6B6B/FFFFFF?text=Feijoada+Completa" alt="Feijoada" class="food-image" id="feijoada">
-                    <img src="https://via.placeholder.com/800x600/4ECDC4/FFFFFF?text=Moqueca+Peixe" alt="Moqueca" class="food-image hidden" id="moqueca">
-                    <img src="https://via.placeholder.com/800x600/45B7D1/FFFFFF?text=Virado+Paulista" alt="Virado" class="food-image hidden" id="virado">
-                    <img src="https://via.placeholder.com/800x600/96CEB4/FFFFFF?text=Bacalhau+Gomes+Sá" alt="Bacalhau" class="food-image hidden" id="bacalhau">
-                    <img src="https://via.placeholder.com/800x600/F7DC6F/FFFFFF?text=Picanha+Chapa" alt="Picanha" class="food-image hidden" id="picanha">
+                    <img src="./image/Lasanha.jpg" alt="Feijoada" class="food-image" id="feijoada">
+                    <img src="./image/Arrumadinho.jpg" alt="Moqueca" class="food-image hidden" id="moqueca">
+                    <img src="./image/Parmegiana.jpg" alt="Virado" class="food-image hidden" id="virado">
+                    <img src="./image/sovete.jpg" alt="Bacalhau" class="food-image hidden" id="bacalhau">
+                    <img src="./image/pudim.jpg" alt="Picanha" class="food-image hidden" id="picanha">
                 </div>
 
                 <div class="menu-section">
